--- a/Hawaii/sr-Latn.lproj/Localizable.strings
+++ b/Hawaii/sr-Latn.lproj/Localizable.strings
@@ -1,6 +1,8 @@
 general.alert.errorTitle = "Greška";
 general.alert.cancel = "Otkaži";
 general.alert.ok = "Ok";
+general.alert.yes = "Da";
+general.alert.no = "Ne";
 general.alert.trickMessage = "Početni datum mora biti pre krajnjeg!";
 general.alert.reasonRequired = "Polje za razlog mora biti popunjeno.";
 general.alert.cancelRequestMessage = "Da li ste sigurni da želite da otkažete ovaj zahtev?";
@@ -65,6 +67,7 @@ summary.leaveRemaining = "Preostalo dana";
 summary.leavetype = "Tip odsustva";
 summary.reason = "Razlog";
 summary.submit = "Pošalji";
+summary.days = " dan(a)";
 
 filter.year = "Godina";
 filter.filter = "Filtriraj";
