--- a/Hawaii/en.lproj/Localizable.strings
+++ b/Hawaii/en.lproj/Localizable.strings
@@ -95,3 +95,14 @@ approval.title = "Approve requests";
 more.title = "More";
 more.signOut = "Sign out";
 
+approval.emptyTitle = "No more requests to approve";
+approval.emptyDescription = "You are doing a good job, keep it up";
+
+history.emptyTitle = "No more requests to approve";
+history.emptyDescription = "You are doing a good job, keep it up";
+
+team.emptyTitle = "No more requests to approve";
+team.emptyDescription = "You are doing a good job, keep it up";
+
+
+
