Token preview with removal

--- a/Hawaii/en.lproj/Localizable.strings
+++ b/Hawaii/en.lproj/Localizable.strings
@@ -122,8 +122,8 @@ teamManagement.nameTitle = "Team name";
 teamManagement.namePlaceholder = "Enter team name";
 teamManagement.emailTitle = "Email";
 teamManagement.emailPlaceholder = "Enter email here";
-teamManagement.activeEnabled = "Active";
-teamManagement.activeDisabled = "Not active";
+teamManagement.deletedEnabled = "Deleted";
+teamManagement.deletedDisabled = "Not deleted";
 teamManagement.teamApproverTitle = "Pick team approver";
 teamManagement.teamApproverPlaceholder = "";
 
@@ -131,8 +131,8 @@ userManagement.fullNameTitle = "Full name";
 userManagement.fullNamePlaceholder = "Enter full name";
 userManagement.emailTitle = "Email";
 userManagement.emailPlaceholder = "Enter email here";
-userManagement.activeEnabled = "Active";
-userManagement.activeDisabled = "Not active";
+userManagement.deletedEnabled = "Deleted";
+userManagement.deletedDisabled = "Not deleted";
 userManagement.jobTitleTitle = "Job title";
 userManagement.jobTitlePlaceholder = "Enter Job title";
 userManagement.userRoleTitle = "User role title";
@@ -146,6 +146,8 @@ userManagement.leaveProfilePlaceholder = "Select leave profile";
 userManagement.basicSection = "Basic info";
 userManagement.companySection = "Company info";
 userManagement.additionalSection = "Additional info";
+userManagement.activeEnabled = "Active";
+userManagement.activeDisabled = "Not active";
 
 token.deviceName = "Device name";
 token.notificationToken = "Device notification token";
