--- a/Hawaii/sr-Latn.lproj/Localizable.strings
+++ b/Hawaii/sr-Latn.lproj/Localizable.strings
@@ -117,6 +117,15 @@ history.emptyDescription = "You are doing a good job, keep it up";
 team.emptyTitle = "No more requests to approve";
 team.emptyDescription = "You are doing a good job, keep it up";
 
+teamManagement.nameTitle = "Team name";
+teamManagement.namePlaceholder = "Enter team name";
+teamManagement.emailTitle = "Email";
+teamManagement.emailPlaceholder = "Enter email here";
+teamManagement.deletedEnabled = "Deleted";
+teamManagement.deletedDisabled = "Not deleted";
+teamManagement.teamApproverTitle = "Pick team approver";
+teamManagement.teamApproverPlaceholder = "";
+
 userManagement.nameTitle = "Team name";
 userManagement.namePlaceholder = "Enter team name";
 userManagement.emailTitle = "Email";
