--- a/Hawaii/en.lproj/Localizable.strings
+++ b/Hawaii/en.lproj/Localizable.strings
@@ -148,6 +148,9 @@ userManagement.companySection = "Company info";
 userManagement.additionalSection = "Additional info";
 userManagement.activeEnabled = "Active";
 userManagement.activeDisabled = "Not active";
+userManagement.allowance = "Allowance";
+userManagement.allowancePlaceholder = "Enter number of hours";
+userManagement.annual = "Annual";
 
 token.deviceName = "Device name";
 token.notificationToken = "Device notification token";
