--- a/Hawaii/sr-Latn.lproj/Localizable.strings
+++ b/Hawaii/sr-Latn.lproj/Localizable.strings
@@ -159,6 +159,7 @@ userManagement.activeDisabled = "Not active";
 userManagement.allowance = "Allowance";
 userManagement.allowancePlaceholder = "Enter number of days";
 userManagement.annual = "Annual";
+userManagement.manual = "Manual adjust";
 
 token.deviceName = "Device name";
 token.notificationToken = "Device notification token";
