--- a/Hawaii/en.lproj/Localizable.strings
+++ b/Hawaii/en.lproj/Localizable.strings
@@ -151,6 +151,8 @@ userManagement.activeDisabled = "Not active";
 userManagement.allowance = "Allowance";
 userManagement.allowancePlaceholder = "Enter number of hours";
 userManagement.annual = "Annual";
+userManagement.manualAdjust = "Manual adjust";
+userManagement.manualAdjustPlaceholder = "Enter custom days";
 
 token.deviceName = "Device name";
 token.notificationToken = "Device notification token";
@@ -171,6 +173,8 @@ leaveProfile.entitlement = "Entitlement";
 leaveProfile.maxBonusDays = "Max bonus days";
 leaveProfile.maxCarriedOver = "Max carried over";
 leaveProfile.training = "Training";
+
+
 
 
 
