Finished allowance update

--- a/Hawaii/en.lproj/Localizable.strings
+++ b/Hawaii/en.lproj/Localizable.strings
@@ -150,8 +150,9 @@ userManagement.activeEnabled = "Active";
 userManagement.activeDisabled = "Not active";
 userManagement.allowance = "Allowance";
 userManagement.allowancePlaceholder = "Enter number of hours";
-userManagement.annual = "Annual";
+userManagement.annual = "Annual hours";
 userManagement.manual = "Manual adjust";
+userManagement.sum = "Sum";
 
 token.deviceName = "Device name";
 token.notificationToken = "Device notification token";
