--- a/Hawaii/sr-Latn.lproj/Localizable.strings
+++ b/Hawaii/sr-Latn.lproj/Localizable.strings
@@ -158,8 +158,9 @@ userManagement.activeEnabled = "Active";
 userManagement.activeDisabled = "Not active";
 userManagement.allowance = "Allowance";
 userManagement.allowancePlaceholder = "Enter number of days";
-userManagement.annual = "Annual";
+userManagement.annual = "Annual hours";
 userManagement.manual = "Manual adjust";
+userManagement.sum = "Sum";
 
 token.deviceName = "Device name";
 token.notificationToken = "Device notification token";
