--- a/Hawaii/sr-Latn.lproj/Localizable.strings
+++ b/Hawaii/sr-Latn.lproj/Localizable.strings
@@ -11,7 +11,7 @@ general.alert.approveRequestMessage = "Da li ste sigurni da želite da odobrite 
 general.alert.approvedRequestMessage = "Uspešno ste odobrili zahtev.";
 general.alert.rejectRequestMessage = "Da li ste sigurni da želite da odbijete ovaj zahtev?";
 general.alert.rejectedRequestMessage = "Uspešno ste odbili zahtev.";
-general.alert.deleteMessage = "Da li ste sigurni da želite da obrisete ovaj objekat?";
+general.alert.deleteMessage = "Da li ste sigurni da želite da obrišete ovaj objekat?";
 
 general.approve = "Odobri";
 general.reject = "Odbij";
@@ -27,8 +27,8 @@ general.back = "Nazad";
 general.delete = "Obrisi";
 general.accept = "Prihvati";
 general.decline = "Odustani";
-general.emptyToken = "Ne mozemo da pristupimo tokenu,probajte da se ulogujete ponovo";
-general.equalToken = "Current device token cannot be removed!";
+general.emptyToken = "Ne mozemo da pristupimo tokenu, probajte da se ulogujete ponovo";
+general.equalToken = "Trenutni token uređaja ne može da se obriše!";
 
 request.status.pending = "Na čekanju";
 request.status.approved = "Odobreno";
@@ -100,79 +100,79 @@ approval.title = "Odobri zahteve";
 
 more.title = "Ostalo";
 more.signOut = "Odjavi se";
-more.manageUsers = "Manage users";
-more.manageTeams = "Manage teams";
-more.manageHolidays = "Manage holidays";
-more.manageLeaveProfiles = "Manage leave profiles";
-more.manageDevices = "Manage devices";
-more.tokenScreenTitle = "Devices";
+more.manageUsers = "Upravljanje zaposlenima";
+more.manageTeams = "Upravljanje timovima";
+more.manageHolidays = "Upravljanje praznicima";
+more.manageLeaveProfiles = "Upravljanje profilima odsustva";
+more.manageDevices = "Upravljanje uređajima";
+more.tokenScreenTitle = "Uređaji";
 more.theme = "Svetla tema";
 
-approval.emptyTitle = "No more requests to approve";
-approval.emptyDescription = "You are doing a good job, keep it up";
+approval.emptyTitle = "Nema novih zahteva!";
+approval.emptyDescription = "";
 
-history.emptyTitle = "No more requests to approve";
-history.emptyDescription = "You are doing a good job, keep it up";
+history.emptyTitle = "Nema zahteva!";
+history.emptyDescription = "";
 
-team.emptyTitle = "No more requests to approve";
-team.emptyDescription = "You are doing a good job, keep it up";
+team.emptyTitle = "Ne postoji traženi zaposleni!";
+team.emptyDescription = "";
 
-teamManagement.nameTitle = "Team name";
-teamManagement.namePlaceholder = "Enter team name";
+teamManagement.nameTitle = "Naziv tima";
+teamManagement.namePlaceholder = "Unesi naziv tima";
 teamManagement.emailTitle = "Email";
-teamManagement.emailPlaceholder = "Enter email here";
-teamManagement.deletedEnabled = "Deleted";
-teamManagement.deletedDisabled = "Not deleted";
-teamManagement.teamApproverTitle = "Pick team approver";
+teamManagement.emailPlaceholder = "Unesi email";
+teamManagement.deletedEnabled = "Obrisano";
+teamManagement.deletedDisabled = "Nije obrisano";
+teamManagement.teamApproverTitle = "Odaberi odobravača tima";
 teamManagement.teamApproverPlaceholder = "";
 
-userManagement.nameTitle = "Team name";
-userManagement.namePlaceholder = "Enter team name";
+userManagement.nameTitle = "Naziv tima";
+userManagement.namePlaceholder = "Unesi naziv tima";
 userManagement.emailTitle = "Email";
-userManagement.emailPlaceholder = "Enter email here";
-userManagement.deletedEnabled = "Deleted";
-userManagement.deletedDisabled = "Not deleted";
-userManagement.teamApproverTitle = "Pick team approver";
+userManagement.emailPlaceholder = "Unesi email";
+userManagement.deletedEnabled = "Obrisano";
+userManagement.deletedDisabled = "Nije obrisano";
+userManagement.teamApproverTitle = "Odaberi odobravača tima";
 userManagement.teamApproverPlaceholder = "";
 
-userManagement.fullNameTitle = "Full name";
-userManagement.fullNamePlaceholder = "Enter full name";
+userManagement.fullNameTitle = "Ime i prezime";
+userManagement.fullNamePlaceholder = "Unesi ime i prezime";
 userManagement.emailTitle = "Email";
-userManagement.emailPlaceholder = "Enter email here";
-userManagement.deletedEnabled = "Deleted";
-userManagement.deletedDisabled = "Not deleted";
-userManagement.jobTitleTitle = "Job title";
-userManagement.jobTitlePlaceholder = "Enter Job title";
-userManagement.userRoleTitle = "User role title";
-userManagement.userRolePlaceholder = "Pick user role";
-userManagement.yearsOfServiceTitle = "Years of service";
+userManagement.emailPlaceholder = "Unesi email";
+userManagement.deletedEnabled = "Obrisano";
+userManagement.deletedDisabled = "Nije obrisano";
+userManagement.jobTitleTitle = "Zvanje";
+userManagement.jobTitlePlaceholder = "Unesi zvanje";
+userManagement.userRoleTitle = "Naziv uloge korisnika";
+userManagement.userRolePlaceholder = "Odaberite ulogu korisnika";
+userManagement.yearsOfServiceTitle = "Godine radnog staža";
 serManagement.yearsOfServicePlaceholder = "";
-userManagement.teamTitle = "Team";
-userManagement.teamPlaceholder = "Select team";
-userManagement.leaveProfileTitle = "Leave Profile";
-userManagement.leaveProfilePlaceholder = "Select leave profile";
-userManagement.basicSection = "Basic info";
-userManagement.companySection = "Company info";
-userManagement.additionalSection = "Additional info";
-userManagement.activeEnabled = "Active";
-userManagement.activeDisabled = "Not active";
-userManagement.allowance = "Allowance";
-userManagement.allowancePlaceholder = "Enter number of days";
-userManagement.annual = "Annual hours";
-userManagement.manual = "Manual adjust";
-userManagement.sum = "Sum";
+userManagement.teamTitle = "Tim";
+userManagement.teamPlaceholder = "Odaberi tim";
+userManagement.leaveProfileTitle = "Profil odsustva";
+userManagement.leaveProfilePlaceholder = "Odaberi profil odsustva";
+userManagement.basicSection = "Osnovni podaci";
+userManagement.companySection = "Podaci o kompaniji";
+userManagement.additionalSection = "Ostali podaci";
+userManagement.activeEnabled = "Aktivan";
+userManagement.activeDisabled = "Neaktivan";
+userManagement.allowance = "Slobodni dani";
+userManagement.allowancePlaceholder = "Unesite broj sati";
+userManagement.annual = "Slobodni sati";
+userManagement.manual = "Ručno podešavanje";
+userManagement.sum = "Suma";
 
-token.deviceName = "Device name";
-token.notificationToken = "Device notification token";
-token.platform = "Device platform";
-token.createdDate = "Creation date";
+token.deviceName = "Naziv uređaja";
+token.notificationToken = "Token uređaja";
+token.platform = "Platforma uređaja";
+token.createdDate = "Datum kreiranja";
 
-holiday.infoSection = "Public holiday info";
-holiday.nameTitle = "Holiday name";
-holiday.namePlaceholder = "Enter holiday name";
-holiday.date = "Holiday date";
+holiday.infoSection = "Podaci o praznicima";
+holiday.nameTitle = "Naziv praznika";
+holiday.namePlaceholder = "Unesi naziv praznika";
+holiday.date = "Datum praznika";
 
-leaveProfile.entitlement = "Entitlement";
-leaveProfile.maxBonusDays = "Max bonus days";
-leaveProfile.maxCarriedOver = "Max carried over";
-leaveProfile.training = "Training";
+leaveProfile.entitlement = "Ovlašćenje";
+leaveProfile.maxBonusDays = "Maksimalno bonus dana";
+leaveProfile.maxCarriedOver = "Maksimalno prenesenih dana";
+leaveProfile.training = "Trening";
